<resources>
    <string name="app_name">Nature Palestine Society</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="featured_observers_observations"><![CDATA[Featured Observers & Observations]]></string>
    <string name="muntaser_abuzaid">Muntaser Abuzaid</string>
    <string name="verified">Verified</string>
    <string name="rainbow_lorikeet">Rainbow Lorikeet</string>
    <string name="observed_nov_18_2022_6_42_pm">Observed: Nov 18, 2022 · 6:42 PM</string>
    <string name="observed">Observed:</string>
    <string name="anthony_khalileh">Anthony Khalileh</string>
    <string name="palestine">Palestine</string>
    <string name="settings">Settings</string>
    <string name="observations">Observations</string>
    <string name="species">Species</string>
    <string name="about">About</string>
    <string name="travel_adventure_lifestyle_photographer_nature_activist"><![CDATA[Travel, Adventure & Lifestyle Photographer & Nature activist]]></string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="post">Post</string>
    <string name="post_details">Post Details</string>
    <string name="what_did_you_observe">What did you observe?</string>
    <string name="select_create_project">Select/Create Project</string>
    <string name="add_photo_voice">Add Photo/Voice</string>
    <string name="add_location">Add Location</string>
    <string name="choose_species">Choose Species</string>
    <string name="try_to_identify">Try to identify</string>
    <string name="beta">Beta</string>
    <string name="back">Back</string>
    <string name="my_account">My Account</string>
    <string name="download_data">Download Data</string>
    <string name="sharing_privacy"><![CDATA[Sharing & Privacy]]></string>
    <string name="help">Help</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save_location">Save location</string>
    <string name="get_location">Get my location</string>
    <string name="location">Location</string>
    <string name="_12_december_2019">12 December, 2019</string>
    <string name="from_9_00am_to_6_00pm">From 9:00am to 6:00pm</string>
    <string name="create_project">Create Project</string>
    <string name="project_name">Project name</string>
    <string name="save">Save</string>
    <string name="or_select_existing_project">Or select existing project</string>
    <string name="select_existing_specie">Select one of existing species</string>
    <string name="select_existing_project">Select one of existing project</string>
    <string name="species_1">Species 1</string>
    <string name="project_1">Project 1</string>
    <string name="search_in_projects">Search in projects</string>
    <string name="search_in_species">Search in species</string>
    <string name="full_name">Full name</string>
    <string name="contact_us">Contact Us</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="type_here">Type here</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_email">Add your email to receive a message With the new password</string>
    <string name="resend">Resend</string>
    <string name="full_name_field_is_required">The Full name field is required</string>
    <string name="email_field_is_required">The Email field is required</string>
    <string name="password_field_is_required">The Password field is required</string>
    <string name="selectDuration">Duration</string>
    <string name="enter_valid_email">Invalid email address</string>
    <string name="enter_valid_password">Invalid password</string>
    <string name="close_app">Are you sure you want to close the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="country">Country</string>
    <string name="error_network">An error occurred while connecting to the network</string>
    <string name="error_login">Wrong email or password</string>
    <string name="error_register">Email already exist</string>
    <string name="add_bio">Edit your profile and add bio</string>
    <string name="updated">Updated</string>
    <string name="projects">Projects</string>
    <string name="is_required">is required</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post">Delete post</string>
    <string name="post_deleted">Post deleted successfully </string>
    <string name="latest_message">Latest message</string>
    <string name="message_">Message ...</string>
    <string name="uploaded">Uploaded</string>
    <string name="failed_upload_image">Failed to upload image</string>
    <string name="uploading">Uploading</string>
    <string name="update">Update</string>
    <string name="image">Image</string>
    <string name="getting_location">Getting location</string>
    <string name="logout">Logout</string>
    <string name="choose_language">Choose Language</string>
    <string name="change_language">Change Language</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="ago">ago</string>
    <string name="search_in_friends">Search in friends</string>
    <string name="search">Search</string>
    <string name="_4_min">4 min</string>
    <string name="start_typing">Start typing...</string>
    <string name="y">y</string>
    <string name="day">days</string>
    <string name="hour">hours</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="notifications">Notifications</string>
    <string name="sent_you_message">sent you message</string>
    <string name="new_message">You have new message!</string>
    <string name="no_items">There Are No Items</string>
    <string name="seen">Seen</string>
    <string name="sent">Sent</string>
    <string name="all">All</string>


</resources>