<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="28dp"
    tools:context=".activities.PostDetailsActivity">


    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/shape_outbox"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/post_details"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgUser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/shape_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:riv_corner_radius="9dp" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="1dp"
        android:textAlignment="viewStart"
        android:fontFamily="@font/cairo_medium"
        tools:text="@string/muntaser_abuzaid"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/imgUser"
        app:layout_constraintTop_toTopOf="@id/imgUser" />


    <TextView
        android:id="@+id/txtProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_full_radius"
        android:backgroundTint="@color/bg"
        android:fontFamily="@font/cairo_regular"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        tools:text="@string/project_1"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />


    <TextView
        android:id="@+id/txtSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/shape_full_radius"
        android:backgroundTint="@color/bg"
        android:fontFamily="@font/cairo_regular"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:text="@string/species_1"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/txtProject"
        app:layout_constraintTop_toTopOf="@+id/txtProject" />


    <TextView
        android:id="@+id/txtTimeAgo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cairo_regular"
        tools:text="@string/_3_days_ago"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsername"
        app:layout_constraintEnd_toStartOf="@+id/txtVerified"
        app:layout_constraintStart_toEndOf="@+id/txtUsername"
        app:layout_constraintTop_toTopOf="@+id/txtUsername" />



    <TextView
        android:id="@+id/txtVerified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius4"
        android:backgroundTint="@color/green"
        android:drawablePadding="3dp"
        android:fontFamily="@font/cairo_medium"
        android:paddingVertical="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="24dp"
        android:text="@string/verified"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgUser" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgPost"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"
        app:riv_corner_radius="8dp"
        android:layout_marginTop="28dp"
        tools:src="@drawable/zephyrus15_1920x1080" />


    <!--

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            android:src="@drawable/shape_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTimeAgo"
            app:riv_corner_radius="8dp" />


        <com.zhpan.indicator.IndicatorView
            android:id="@+id/indicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@id/viewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:vpi_slide_mode="worm"
            app:vpi_slider_checked_color="@color/primary"
            app:vpi_slider_normal_color="@color/secondary_text"
            app:vpi_style="circle" />
    -->

    <TextView
        android:id="@+id/txtPostTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/cairo_bold"
        tools:text="@string/rainbow_lorikeet"
        android:textColor="@color/primary_text"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPost" />


    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"

        android:textAlignment="viewStart"
        android:fontFamily="@font/cairo_medium"
        tools:text="@string/observed_nov_18_2022_6_42_pm"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPostTitle" />


    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cairo_bold"
        tools:text="@string/location"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDate" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress"
        tools:ignore="FragmentTagUsage" />


</androidx.constraintlayout.widget.ConstraintLayout>