<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:backgroundTint="@color/light_primary"
    android:background="@drawable/shape_layout_top">

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="17dp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/cairo_bold"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:lineHeight="18dp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/add_email"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="13sp"
        android:paddingHorizontal="21dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAdd" />

    <Button
        android:id="@+id/btnResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginVertical="29dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn"
        android:text="@string/resend"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>