<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/shape_12"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginBottom="28dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgSender"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:scaleType="centerCrop"
        android:src="@drawable/zephyrus15_1920x1080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="8dp" />

    <TextView
        android:id="@+id/txtSender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cairo_medium"
        android:text="@string/full_name"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgSender"
        app:layout_constraintStart_toEndOf="@id/imgSender"
        app:layout_constraintTop_toTopOf="@id/imgSender" />


    <TextView
        android:id="@+id/txtTimeAgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/_3_days_ago"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage" />


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_message"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:fontFamily="@font/cairo_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgSender" />


</androidx.constraintlayout.widget.ConstraintLayout>